# a-Simple-Text-Editor

./: CMakeLists.txt  README.md
src/: EditorWindow.cpp  EditorWindow.h  callbacks.cpp  callbacks.h  highlight.cpp  highlight.h  main.cpp  other.cpp  other.h  variables.h
